objects/Notification_Center_HTML_Home_Page__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Notification Center HTML Home Page</label>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_To__c</fullName>
        <label>Mail To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Text__c</fullName>
        <label>Display Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Background_Color__c</fullName>
        <label>Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>